Fix vimeo embed on mobile

--- a/static/scss/typo_bp1.scss
+++ b/static/scss/typo_bp1.scss
@@ -17,4 +17,8 @@
   blockquote {
     margin: 0; 
   }
+
+  iframe {
+    width: 100% !important;
+  }
 }
